feat: call ps in bat